Added new methods for transaction and deposit. Refactored code and created new unit tests